devops/bootstrap_kind_cluster/ingress-nginx/test_ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
  # Default port used by the image
  - port: 5678
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
  # Default port used by the image
  - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  tls:
  - hosts:
    - kind01.codepraxis.dev
    secretName: wildcard-cert-route53-tls
  rules:
    - host: kind01.codepraxis.dev
      http:
        paths:
        - pathType: Prefix
          path: "/foo"
          backend:
            service:
              name: foo-service
              port:
                number: 5678
        - pathType: Prefix
          path: "/bar"
          backend:
            service:
              name: bar-service
              port:
                number: 5678
---
